tests/ui/higher-ranked/trait-bounds/trivial-does-not-hold.stderr
error: higher-ranked lifetime error
  --> $DIR/trivial-does-not-hold.rs:7:5
   |
LL |     || {};
   |     ^^^^^
   |
   = note: could not prove `for<'a> &'a (): 'b`

error: aborting due to 1 previous error

